Update .gitignore to include specific cache directories and modify setup function to reference the correct schema path

--- a/.gitignore
+++ b/.gitignore
@@ -3,13 +3,13 @@ venv/
 
 # Python cache files
 __pycache__/
-*.pyc
-*.pyo
-*.pyd
-Functons/__pycache__/
-*.pyc
-*.pyo
-*.pyd
+
+api/services/__pycache__/
+
+
+api/routes/__pycache__/
+api/routes/models/__pycache__/
+
 # Distribution / packaging
 build/
 dist/
